# PythonChallenge

./: found_solutions.txt  pyproject.toml  solution.py
