[tool.poetry]
name = "pythonchallenge"
version = "0.1.0"
description = ""
authors = ["Grimcheese <albychawula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
selenium = "^4.7.2"
beautifulsoup4 = "^4.11.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
